Release 1.2 (Releases 12-23-23):
Notes:
- The Linux version is currently experiencing issues with the Bot AI. This is a known issue and will be fixed later. (TEST TO SEE IF IT IS FIXED)
- This was originally meant to come out around Halloween. Due to recent events and personal issues, this update got a 2 month delay.

Mane changes:
- Introducing BRAINS ARE MAGIC!
	- A new game mode based on "Infection" from the Halo series.
	- In a game with bots, zombie bots are more aggressive and survivor bots have a chance of being infected by "The Sickness"
- Added "HOOVES" (fists) as a weapon for all modes.

Misc. Changes:
- Added tributes to a friend. 💙
- Improved Discord Rich Presence details.
- Enabled a 10-minute timer by default.
- Improved bot attack AI.
- Improved main menu backgrounds.
- Added more bot names.
- Improved violence options to deter younger and more sensitive players.

Bug Fixes:
- Fixed a bug where spectators viewed players as enemies.
- Fixed an issue where players couldn't pick up weapons after switching back to their original team from spectator mode.
- Fixed an exploit where players in Instagib could pick up weapons in rare cases.

Release 1.1.1 (Released 2-19-22):
Mane changes:
- Added various horn and wing options!

Misc. Changes:
- Renamed "Swishy 3" to  "Intellectual"

Release 1.1 (Released 1-19-22):
Mane changes:
- Added an Instagib mode.
	- Railguns with infinite ammo. One shot, one kill.
	- Ponies are dismembered on death when when gore is enabled on the client.
	- Ponies cannot pick up weapons or items.

- Added Linux support. (Thank you to Cyanide for help with this :D)
	- Compiled and tested under Pop_OS (Ubuntu).

- A model preview will now appear in the customization panel!
	- Press and hold the left mouse button to rotate.

- You can now remove your upper mane and tail.
- Gamemodes are now considered 1 option.

Bug Fixes:
- Fixed custom weapons not being given with "impulse 101".